submit chnages after disign fix
submit chnages after disign fix

--- a/ecommrce/ecommrce.csproj
+++ b/ecommrce/ecommrce.csproj
@@ -93,20 +93,33 @@
   <ItemGroup>
     <Content Include="App\app_v10.js" />
     <Content Include="App\controllers\DashboardMainController.js" />
+    <Content Include="App\controllers\data.js" />
+    <Content Include="App\controllers\ShopDetailController.js" />
+    <Content Include="App\controllers\ShopmainController.js" />
     <Content Include="App\controllers\loginController.js" />
     <Content Include="App\controllers\mainController2.js" />
     <Content Include="App\controllers\mainController_v11.js" />
     <Content Include="App\directives\httpInterceptor.js" />
     <Content Include="App\loginApp.js" />
+    <Content Include="App\services\ShopService.js" />
     <Content Include="App\services\UserCompanyService.js" />
     <Content Include="App\services\UserService_v1.js" />
     <Content Include="App\services\ViewVariablesService_v1.js" />
     <Content Include="App\views\Dashboard.html" />
     <Content Include="App\views\login.html" />
+    <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\csslibrary.css" />
+    <Content Include="Content\css\custom.css" />
     <Content Include="Content\css\index.css" />
     <Content Include="Content\css\kendo.custom.css" />
     <Content Include="index.html" />
+    <Content Include="ItemImage\Ilets Book.png" />
+    <Content Include="ItemImage\note.png" />
+    <Content Include="ItemImage\Onlinetest.png" />
+    <Content Include="Scripts\1.10.3-jquery-ui.js" />
+    <Content Include="Scripts\ajax-libs-jquery3.2.1-jquery.min.js" />
+    <Content Include="Scripts\ajax.googleapis.com-ajax-libs-jquery-1.4.2-jquery.min.js" />
+    <Content Include="Scripts\ajax.googleapis.com-ajax-libs-jqueryui-1.8.1-jquery-ui.min.js" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -151,37 +164,65 @@
     <Content Include="Scripts\angular-ui\ui-bootstrap.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\audiodisplay.js" />
     <Content Include="Scripts\autocomplete.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\cbpViewModeSwitch.js" />
     <Content Include="Scripts\checklist-model.js" />
+    <Content Include="Scripts\classie.js" />
+    <Content Include="Scripts\classie1.js" />
     <Content Include="Scripts\daterangepicker.js" />
+    <Content Include="Scripts\disablerightclick.js" />
+    <Content Include="Scripts\easyResponsiveTabs.js" />
     <Content Include="Scripts\hotkeys.js" />
     <Content Include="Scripts\hotkeys.min.js" />
     <Content Include="Scripts\igniteui-angular.js" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\imageupload.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery-1.11.1.min.js" />
+    <None Include="Scripts\jquery-1.4.1-vsdoc.js" />
+    <Content Include="Scripts\jquery-1.4.1.js" />
+    <Content Include="Scripts\jquery-1.4.1.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
+    <Content Include="Scripts\jquery-1.9.1.js.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\jquery-jtemplates_uncompressed.js" />
+    <Content Include="Scripts\jquery-ui-1.7.2.custom.min.js" />
+    <Content Include="Scripts\jquery-ui.css.js" />
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.animsition.min.js" />
+    <Content Include="Scripts\jquery.blockUI.js" />
     <Content Include="Scripts\jquery.csv.min.js" />
+    <Content Include="Scripts\jquery.easydropdown.js" />
     <Content Include="Scripts\jquery.fancybox-plus.js" />
+    <Content Include="Scripts\jquery.flexslider.js" />
     <Content Include="Scripts\jquery.formatCurrency-1.4.0.js" />
+    <Content Include="Scripts\jquery.js" />
+    <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.scrollTo.min.js" />
+    <Content Include="Scripts\jquery.simplemodal.1.4.4.min.js" />
     <Content Include="Scripts\jquery.slimscroll.min.js" />
     <Content Include="Scripts\jquery.sparkline.min.js" />
     <Content Include="Scripts\jRespond.min.js" />
+    <Content Include="Scripts\JSON.js" />
+    <Content Include="Scripts\jtemplates.js" />
     <Content Include="Scripts\kendo.common.min.css" />
     <Content Include="Scripts\kendo.custom.js" />
     <Content Include="Scripts\library.js" />
     <Content Include="Scripts\library.min.js" />
     <Content Include="Scripts\library.minified.js" />
     <Content Include="Scripts\loading-bar.js" />
+    <Content Include="Scripts\loder1.8.3jquery.min.js" />
     <Content Include="Scripts\main-template.js" />
+    <Content Include="Scripts\main.js" />
     <Content Include="Scripts\mainlibraries.js" />
     <Content Include="Scripts\mainlibraries.min.js" />
+    <Content Include="Scripts\maxcdn.bootstrapcdn.com-bootstrap-3.3.7-js-bootstrap.min.js" />
     <Content Include="Scripts\mb-scrollbar.min.js" />
+    <Content Include="Scripts\megamenu.js" />
     <Content Include="Scripts\moment-with-locales.js" />
     <Content Include="Scripts\moment-with-locales.min.js" />
     <Content Include="Scripts\moment.js" />
@@ -195,8 +236,11 @@
     <Content Include="Scripts\npm.js" />
     <Content Include="Scripts\ocLazyLoad.js" />
     <Content Include="Scripts\pako_deflate.min.js" />
+    <Content Include="Scripts\simpleCart.min.js" />
+    <Content Include="Scripts\style.css" />
     <Content Include="Scripts\ui-bootstrap-tpls-0.12.1.min.js" />
     <Content Include="Scripts\ui-router-tabs.js" />
+    <Content Include="Scripts\uisearch.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
