chnages for merge project
chnages for merge project

--- a/ecommrce/ecommrce.csproj
+++ b/ecommrce/ecommrce.csproj
@@ -67,7 +67,136 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="ItemImage\1.jpg" />
+    <Content Include="ItemImage\1ajax-loader.gif" />
+    <Content Include="ItemImage\1oldajax-loader.gif" />
+    <Content Include="ItemImage\20%281%29.png" />
+    <Content Include="ItemImage\2ajax-loader.png" />
+    <Content Include="ItemImage\2nd-day.jpg" />
+    <Content Include="ItemImage\3.jpg" />
+    <Content Include="ItemImage\AddNewitem.jpg" />
+    <Content Include="ItemImage\alert.png" />
+    <Content Include="ItemImage\arrow2.gif" />
+    <Content Include="ItemImage\arrows.png" />
+    <Content Include="ItemImage\arrowws.png" />
+    <Content Include="ItemImage\aus.png" />
+    <Content Include="ItemImage\bag.png" />
     <Content Include="ItemImage\banner.jpg" />
+    <Content Include="ItemImage\banner1.jpg" />
+    <Content Include="ItemImage\big1.jpg" />
+    <Content Include="ItemImage\big2.jpg" />
+    <Content Include="ItemImage\big3.jpg" />
+    <Content Include="ItemImage\big4.jpg" />
+    <Content Include="ItemImage\big5.jpg" />
+    <Content Include="ItemImage\black.jpg" />
+    <Content Include="ItemImage\book-detail.jpg" />
+    <Content Include="ItemImage\book1.png" />
+    <Content Include="ItemImage\book2.png" />
+    <Content Include="ItemImage\book21.png" />
+    <Content Include="ItemImage\booka.png" />
+    <Content Include="ItemImage\bookb.png" />
+    <Content Include="ItemImage\calendar.png" />
+    <Content Include="ItemImage\camera-loader.gif" />
+    <Content Include="ItemImage\canada.png" />
+    <Content Include="ItemImage\Cancel.jpg" />
+    <Content Include="ItemImage\cart.jpg" />
+    <Content Include="ItemImage\chat_icon.png" />
+    <Content Include="ItemImage\close_1.png" />
+    <Content Include="ItemImage\compare.png" />
+    <Content Include="ItemImage\dark.jpg" />
+    <Content Include="ItemImage\Edit.jpg" />
+    <Content Include="ItemImage\facebook.jpg" />
+    <Content Include="ItemImage\favicon.ico" />
+    <Content Include="ItemImage\f_logo.png" />
+    <Content Include="ItemImage\g-star-raw.jpg" />
+    <Content Include="ItemImage\g1.jpg" />
+    <Content Include="ItemImage\g2.jpg" />
+    <Content Include="ItemImage\g3.jpg" />
+    <Content Include="ItemImage\g4.jpg" />
+    <Content Include="ItemImage\g5.jpg" />
+    <Content Include="ItemImage\g6.jpg" />
+    <Content Include="ItemImage\g7.jpg" />
+    <Content Include="ItemImage\g8.jpg" />
+    <Content Include="ItemImage\googleplus.jpg" />
+    <Content Include="ItemImage\grid_view.png" />
+    <Content Include="ItemImage\icon.jpg" />
+    <Content Include="ItemImage\icon1.jpg" />
+    <Content Include="ItemImage\icon2.jpg" />
+    <Content Include="ItemImage\img-sprite.png" />
+    <Content Include="ItemImage\img1.jpg" />
+    <Content Include="ItemImage\img2.jpg" />
+    <Content Include="ItemImage\img3.jpg" />
+    <Content Include="ItemImage\img4.jpg" />
+    <Content Include="ItemImage\Inbox.png" />
+    <Content Include="ItemImage\India 5 Rupees.png" />
+    <Content Include="ItemImage\India10Rupees.png" />
+    <Content Include="ItemImage\InitialImage.png" />
+    <Content Include="ItemImage\leather-book-preview.png" />
+    <Content Include="ItemImage\list_view.png" />
+    <Content Include="ItemImage\logo-admin.jpg" />
+    <Content Include="ItemImage\logo.jpg" />
+    <Content Include="ItemImage\logo.png" />
+    <Content Include="ItemImage\logo_new.png" />
+    <Content Include="ItemImage\m1.jpg" />
+    <Content Include="ItemImage\m2.jpg" />
+    <Content Include="ItemImage\m3.jpg" />
+    <Content Include="ItemImage\m4.jpg" />
+    <Content Include="ItemImage\m5.jpg" />
+    <Content Include="ItemImage\m6.jpg" />
+    <Content Include="ItemImage\magnify.png" />
+    <Content Include="ItemImage\marker.png" />
+    <Content Include="ItemImage\mih-jeans.jpg" />
+    <Content Include="ItemImage\p1.jpg" />
+    <Content Include="ItemImage\p2.jpg" />
+    <Content Include="ItemImage\p3.jpg" />
+    <Content Include="ItemImage\page1_img.jpg" />
+    <Content Include="ItemImage\page1_img1.jpg" />
+    <Content Include="ItemImage\page1_img2.jpg" />
+    <Content Include="ItemImage\page1_img3.jpg" />
+    <Content Include="ItemImage\page1_img4.jpg" />
+    <Content Include="ItemImage\page2_img1.jpg" />
+    <Content Include="ItemImage\page2_img2.jpg" />
+    <Content Include="ItemImage\page3_img1.jpg" />
+    <Content Include="ItemImage\page3_img2.jpg" />
+    <Content Include="ItemImage\page3_img3.jpg" />
+    <Content Include="ItemImage\page3_img4.jpg" />
+    <Content Include="ItemImage\page3_img5.jpg" />
+    <Content Include="ItemImage\page4_img1.jpg" />
+    <Content Include="ItemImage\phone_icon.png" />
+    <Content Include="ItemImage\preloader.gif" />
+    <Content Include="ItemImage\prevnext.png" />
+    <Content Include="ItemImage\quotes.png" />
+    <Content Include="ItemImage\quotes_big.png" />
+    <Content Include="ItemImage\s1.jpg" />
+    <Content Include="ItemImage\s2.jpg" />
+    <Content Include="ItemImage\s3.jpg" />
+    <Content Include="ItemImage\s4.jpg" />
+    <Content Include="ItemImage\sale-icon.jpg" />
+    <Content Include="ItemImage\search.png" />
+    <Content Include="ItemImage\search_icon.png" />
+    <Content Include="ItemImage\SelectedButton.png" />
+    <Content Include="ItemImage\shop-now.jpg" />
+    <Content Include="ItemImage\slide1.jpg" />
+    <Content Include="ItemImage\slide2.jpg" />
+    <Content Include="ItemImage\slide3.jpg" />
+    <Content Include="ItemImage\subscribe_icon.png" />
+    <Content Include="ItemImage\tick1.png" />
+    <Content Include="ItemImage\totop.png" />
+    <Content Include="ItemImage\touchstone-educationals-logo.jpg" />
+    <Content Include="ItemImage\touchstone-educationals.jpg" />
+    <Content Include="ItemImage\touchstone-logo.png" />
+    <Content Include="ItemImage\touchstone.png" />
+    <Content Include="ItemImage\twitter.jpg" />
+    <Content Include="ItemImage\txtimg1.png" />
+    <Content Include="ItemImage\user.jpg" />
+    <Content Include="ItemImage\w1.jpg" />
+    <Content Include="ItemImage\w2.jpg" />
+    <Content Include="ItemImage\w3.jpg" />
+    <Content Include="ItemImage\Warning.png" />
+    <Content Include="ItemImage\weekday1.jpg" />
+    <Content Include="ItemImage\whatsapp.jpg" />
+    <Content Include="ItemImage\wishlist.png" />
+    <Content Include="ItemImage\zeland.png" />
     <Content Include="Scripts\angular-animate.min.js.map" />
     <Content Include="Scripts\angular-aria.min.js.map" />
     <Content Include="Scripts\angular-cookies.min.js.map" />
@@ -248,7 +377,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ItemImage\ItemImages\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
