--- a/ecommrce/ecommrce.csproj
+++ b/ecommrce/ecommrce.csproj
@@ -66,6 +66,11 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App\Admin\controllers\BrandController.js" />
+    <Content Include="App\Admin\Services\BrandMasterService.js" />
+    <Content Include="App\Admin\Services\SubCategoryMasterService.js" />
+    <Content Include="App\Admin\views\BrandView.html" />
+    <Content Include="App\views\LoginView.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
