--- a/ecommrce/ecommrce.csproj
+++ b/ecommrce/ecommrce.csproj
@@ -67,9 +67,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App\Admin\controllers\BrandController.js" />
+    <Content Include="App\Admin\controllers\ItemController.js" />
     <Content Include="App\Admin\Services\BrandMasterService.js" />
+    <Content Include="App\Admin\Services\brandService.js" />
+    <Content Include="App\Admin\Services\ItemService.js" />
     <Content Include="App\Admin\Services\SubCategoryMasterService.js" />
+    <Content Include="App\Admin\Services\SubCategoryService.js" />
     <Content Include="App\Admin\views\BrandView.html" />
+    <Content Include="App\Admin\views\ItemView.html" />
     <Content Include="App\controllers\CheckLoginController.js" />
     <Content Include="App\views\LoginView.html" />
     <Content Include="Content\bootstrap-theme.css" />
